--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -8,10 +8,11 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:id="@+id/image_view"
-        android:background="@color/colorAccent"
+        android:background="@color/imageItem"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:src="@mipmap/ic_launcher_foreground"/>
 
 </LinearLayout>
